# ESP32-BLE-AND-SCREEN

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  GenJyuuGothic_32.c  gattc_demo.c  gattc_demo_final.c  gattc_demo备份.c  idf_component.yml
